# cylinder_viz_refactor

./: .env.example  .gitignore  DEPLOY_UPDATE.md  README.md  README_DEPLOY.md  deploy_iis_reverse_proxy.ps1  pyproject.toml  requirements.txt  streamlit_app.py
assets/: custom.css
iis_proxy_site/: web.config
improvement/: improvement.txt  production_blueprint_flask_postgres_50_users.txt
lib/streamlit_analytics2/: display.py  main.py
qa_automation/: README.md  run_qa.ps1  run_qa_sidebar_toggle.ps1  streamlit_qa_sidebar_toggle.py  streamlit_qa_smoke.py
scripts/: app_launcher.py  build_exe.ps1  common.ps1  create_scheduled_task.ps1  deploy_checklist.ps1  deploy_iis_reverse_proxy.ps1  deploy_service.ps1  diagnose_service_procs.ps1  ensure_arr.ps1  install_winsw_service.ps1  smoke_test.py  stop_service_tree.ps1
src/config/: __init__.py  config.py
src/cylinder_app/: __init__.py  app_flow.py
src/cylinder_app/state/: __init__.py  options.py  sidebar_options.py  sidebar_state.py
src/cylinder_app/ui/: __init__.py  bootstrap.py  chart_view.py  sidebar.py  table_data.py  table_plot.py  (+3 more)
src/cylinder_domain/: __init__.py
src/cylinder_viz/: __init__.py  aggregation.py  parsing.py  visualization.py
src/shared/: __init__.py  analytics_adapter.py  assets.py  data_io.py  dataframe_styles.py  perf.py  view.py
src/utils/: __init__.py  helper.py  view.py
streamlit_analytics2/: __init__.py  config.py  display.py
tests/: test_aggregation.py  test_analytics_persistence.py  test_app_launcher.py  test_column_detection.py  test_table_selection.py  test_thresholds.py
(+11 files in other folders)
