[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cylinder-data-viz"
version = "0.1.0"
description = "Streamlit application for cylinder machine data analysis and visualization"
readme = "README.md"
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
